--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ li {
 }
 p {
     text-align: center;
-    width: 100%;
+    width: 600px;
     margin: 20px auto;
     font-weight: normal;
     color: white;
