--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ ul {
     margin-bottom: 50px;
     animation: zoom 2s ease forwards;
     opacity: 0;
-    animation-delay: calc(.2s*var(--clr));
+    font-weight: bold;
 }
 li {
     display: inline;
